--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search for Starlover's Embeds</title>
     <link href="https://fonts.googleapis.com/css2?family=Cute+Font:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="Assets/starlover.png" type="image/x-icon">
+    <link rel="icon" href="Assets/icon.png" type="image/x-icon">
     <style>
         body {
             font-family: 'Cute Font', sans-serif;
