--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </label>
     </div>
     
-    <div id="fileStatus">Select categories and enter a search term to start searching!</div>
+    <div id="fileStatus">Select categories and enter a search term to start searching! (discontinued)</div>
     <input type="text" id="searchQuery" placeholder="Enter search term">
     <button id="searchButton" onclick="loadAndSearch()">Search</button>
     <div id="results"></div>
