--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search for Starlover's Embeds</title>
+    <title>Search</title>
     <link href="https://fonts.googleapis.com/css2?family=Cute+Font:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="Assets/icon.png" type="image/x-icon">
     <style>
